# job-hunt-copilot

./: .dockerignore  .env.example  .gitignore  Tiltfile  package.json  pnpm-lock.yaml  vercel.json
.vercel/: project.json
apps/agent/: graph.py  main.py  pyproject.toml  tools.py
apps/agent/tests/: test_run.py
apps/ai/: ai_functions.py  graph.py  main.py  pyproject.toml  runs.py  tools.py
apps/ai-core/: main.py  pyproject.toml
apps/ai-core/tests/: test_health.py  test_parse_cv.py  test_score.py
apps/ai/tests/: test_agent.py  test_health.py
apps/api/: .env.example  package.json
apps/api/drizzle/: 0000_flat_whizzer.sql
apps/api/drizzle/meta/: 0000_snapshot.json  _journal.json
apps/api/src/: app.module.ts  main.ts
apps/api/src/agent/: agent.controller.ts  agent.module.ts  agent.service.ts
apps/api/src/ai-core/: ai-core.module.ts  ai-core.service.ts
apps/api/src/applications/: applications.controller.ts  applications.service.ts
apps/api/src/auth/: auth.controller.ts  (+4 more)
apps/web/: next.config.ts  package.json  playwright.config.ts  vercel.json
apps/web/e2e/: auth.spec.ts  navigation.spec.ts
apps/web/src/: auth.ts  proxy.ts
docker/: agent.Dockerfile  ai-core.Dockerfile  ai.Dockerfile  api.Dockerfile  web.Dockerfile
docs/: MIGRATION_PLAN.md
infra/charts/agent/: Chart.yaml  values.yaml
infra/charts/ai-core/: Chart.yaml  values.yaml
infra/charts/api/: Chart.yaml  values.yaml
infra/charts/umbrella/: Chart.yaml  values.local.yaml  values.yaml
infra/charts/web/: Chart.yaml  values.yaml
infra/k3d/: cluster.yaml
infra/tilt/: Tiltfile
(+54 files in other folders)
