[project]
name = "ai"
version = "0.1.0"
description = "Job Hunt Copilot — merged AI service (AI Core + Agent)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # ai-core
    "fastapi>=0.136.1",
    "google-genai>=1.65.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pypdf>=6.11.0",
    "python-multipart>=0.0.28",
    "sse-starlette>=3.4.4",
    "uvicorn[standard]>=0.46.0",
    # agent
    "httpx>=0.28.1",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.2.0",
    "feedparser>=6.0.11",
    # shared
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
